<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo"
		android:padding="3dip"
        android:textColor="#FFFFFF"
		android:textStyle="bold"
	/>
    
<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow android:id="@+id/geoLatitudeRow">

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/geoLatitudeName"
				android:textColor="#FFFFFF"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/geoLatitudeValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>

        <TableRow android:id="@+id/geoLongitudeRow">
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/geoLongitudeName"
				android:textColor="#FFFFFF"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/geoLongitudeValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>
        <TableRow android:id="@+id/geoAltitudeRow">>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/geoAltitudeName"
				android:textColor="#FFFFFF"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/geoAltitudeValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>
        
        <TableRow android:id="@+id/geoQueryRow">>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/geoQueryName"
				android:textColor="#FFFFFF"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/geoQueryValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>
                
  </TableLayout>      

</LinearLayout>
